# gforce

./: .gitignore  ARCHITECTURE.md  Dockerfile  Pulumi.yaml  README.md  pyproject.toml
gforce/: __init__.py
gforce/cli/: __init__.py  main.py
gforce/core/: __init__.py  auth.py  batch.py  bootstrap.py  cache.py  config.py  guardrails.py
gforce/infra/: __init__.py  stack.py
gforce/scripts/: __init__.py  worker_init.py
scripts/: build-worker-image.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_auth.py  test_batch.py  test_bootstrap.py  test_cache.py  test_cli.py  test_config.py  test_guardrails.py  test_infra.py  test_worker.py
